welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:11: error: not found: value !!
	else if (!!vacation) {
                 ^alarmClock:11: error: type mismatch;
 found   : Unit
 required: String
	else if (!!vacation) {
             ^